[project]
name = "wenshushu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
package-mode = false
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "base58 (>=2.1.1,<3.0.0)",
    "pycryptodomex (>=3.22.0,<4.0.0)",
    "pysocks (>=1.7.1,<2.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.9"

